--- a/index.html
+++ b/index.html
@@ -3,6 +3,15 @@
 <head>
 	<link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet">
 	<title>Tisla Babie</title>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-123250493-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-123250493-1');
+</script>
 </head>
 <body>
 <div class="jumbotron jumbotron-fluid p-3 p-md-5 text-white rounded bg-dark">
