--- a/index.html
+++ b/index.html
@@ -12,11 +12,13 @@
 
   gtag('config', 'UA-123250493-1');
 </script>
+<style type="text/css">
+
+</style>
 </head>
 <body>
 <div class="jumbotron jumbotron-fluid p-3 p-md-5 text-white rounded bg-dark">
 <h1>TISLA BABIE</h1>
-<img src="/content/tisla-page-hero.jpg" style="width:100%;" class="img-fluid" alt="Responsive image">
 </div>
 <div class="container">
 
@@ -59,11 +61,29 @@
 
 
 <br>
+<div class="row">
+  <div class="col-md-4">
+  <div class="card mb-4 shadow-sm">
+    <div class="embed-responsive embed-responsive-16by9">
+      <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/SfHxqmHWJYo?showinfo=0" allowfullscreen></iframe>
+    </div>
+  </div>
+  </div>
+  <div class="col-md-4">
+  <div class="card mb-4 shadow-sm">
+    <div class="embed-responsive embed-responsive-16by9">
+      <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/P2kcotpKu3k?showinfo=0" allowfullscreen></iframe>
+    </div>
+  </div>
+  </div>
+</div>
 
 
 <h2>GET IN TOUCH</h2>
 <p class="lead my-3">
 <a href="mailto:info@tislababie.com">info@tislababie.com</a>
+<br>
+@Tisla Babie on <a href="https://www.youtube.com/channel/UC7vPWWUjtW6RG9FZcJzdUIA">YouTube</a>
 <br>
 @Tislababie on <a href="https://www.facebook.com/tislababie">Facebook</a>
 </p>
