--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
     <a href="https://us.napster.com/artist/tisla-babie">Napster</a></li>
 </ul>
 
+Instagram: <a href="https://www.instagram.com/tisla_babie/">@tisla_babie</a>
 <br>
 <br>
 <h1>MUSIC</h1>
