--- a/index.html
+++ b/index.html
@@ -54,6 +54,16 @@ Instagram: <a href="https://www.instagram.com/tisla_babie/">@tisla_babie</a>
 <h1>MUSIC</h1>
 
 <div class="embed-responsive embed-responsive-16by9">
+ <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/hczo5e5iPP0?showinfo=0" allowfullscreen></iframe>
+</div>
+<br>
+
+<div class="embed-responsive embed-responsive-16by9">
+ <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/lOymhNCCivc?showinfo=0" allowfullscreen></iframe>
+</div>
+<br>
+	
+<div class="embed-responsive embed-responsive-16by9">
  <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/iPKi-LRyEVs?showinfo=0" allowfullscreen></iframe>
 </div>
 <br>
