--- a/index.html
+++ b/index.html
@@ -101,6 +101,31 @@ Instagram: <a href="https://www.instagram.com/tisla_babie/">@tisla_babie</a>
 
 <br>
 <div class="row">
+ <div class="col-md-4">
+  <div class="card mb-4 shadow-sm">
+    <div class="embed-responsive embed-responsive-16by9">
+      <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/JaErhmWuPc4?showinfo=0" allowfullscreen></iframe>
+    </div>
+  </div>
+ </div>
+
+ <div class="col-md-4">
+  <div class="card mb-4 shadow-sm">
+    <div class="embed-responsive embed-responsive-16by9">
+      <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/b-RSBuI8zms?showinfo=0" allowfullscreen></iframe>
+    </div>
+  </div>
+ </div>
+
+ <div class="col-md-4">
+  <div class="card mb-4 shadow-sm">
+    <div class="embed-responsive embed-responsive-16by9">
+      <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/Zb95nRluoUM?showinfo=0" allowfullscreen></iframe>
+    </div>
+  </div>
+ </div>
+
+	
   <div class="col-md-4">
   <div class="card mb-4 shadow-sm">
     <div class="embed-responsive embed-responsive-16by9">
