--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ Instagram: <a href="https://www.instagram.com/tisla_babie/">@tisla_babie</a>
 
 	
 <div class="embed-responsive embed-responsive-16by9">
- <iframe class="embed-responsive-item" src="https://www.youtube.com/watch?v=hiQYtDBXsQU?showinfo=0" allowfullscreen></iframe>
+ <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/hiQYtDBXsQU?showinfo=0" allowfullscreen></iframe>
 </div>
 <br>
 	
